			   ==============

* ADDED: Allow for `editor->style: Name, @nil' to delete the given style from
  the editor.

* ADDED: Many PceEmacs goodies for Prolog mode
	- Colour arguments to all (declared) meta-calls
	- Better handling of explicit cross-module calls and definitions
	- Precompile prolog_mode.pl and related files to qlf to speed up
	  loading on slow machines.
	- Marking variables.

* MODIFIED: Make pce_image_directory/1 not open the display when compiling
  a state.  This should be fine as long as the compilation process doesn't
  create images.  If it does, open the display explicitly before creating
  the rest of the state using send(@display, open).

* FIXED: Editor: bind C-j to newline_and_indent as well as LFD, as these
  sequences send different commands since a while.  Used to work nevertheless
  in PceEmacs because `fundamental_mode->typed' was defined to accept
  event_id rather then event.

* FIXED: Improve keyboard input handling in X11 version when using transient
  windows.  Opening a modal window now gives this window the input focus
  regardless of what the window manager wants.

* ADDED: implements/3 from library(pce_meta): allow for variable method
  name.  This library now handles not-yet-realised classes fully dynamic.

* ADDED: `editor->auto_fill', doing the fill-part of ->insert_self_fill,
  so filling can easily be specialised in subclasses.

* ADDED: emacs_language_mode->fill_comment_paragraph to fill/justify
  regions commented using the line-comment character.
  `emacs_prolog_mode->fill_paragraph' now dynamically distinguishes
  between ->indent_clause, ->fill_comment_paragraph or normal
  ->fill_paragraph.

* MODIFIED: `text_buffer<-scan_syntax' to return a tuple containing the
  syntax category with the location where this syntactical entity started.
  Also documented the method.  Being previously undocumented and pretty
  obscure we don't anticipate public usage.
